# CodeFlattener

./: .flattener.toml  .flattener.toml-template  Cargo.toml  CodeFlattener-Flat.txt  LICENSE  README.md  Todo.md
.github/workflows/: release.yml
src/: config.rs  main.rs  profiles.rs  wordpress_profile.rs
tests/: profiles_integration.rs
