[package]
name = "code-flattener"
version = "0.1.2"
edition = "2024"

[dependencies]
rayon = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
glob = "0.3"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "cargo"] }
ignore = "0.4.23"
once_cell = "1.21.3"
tiktoken-rs = "0.7.0"
